--- a/.github/workflows/test-runners.yml
+++ b/.github/workflows/test-runners.yml
@@ -11,33 +11,42 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-24.04
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Validate composer.json and composer.lock
-      run: composer validate --strict
+      - name: Set up PHP with Xdebug
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+          extensions: xdebug
+          coverage: xdebug
 
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v3
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
+      - name: Validate composer.json and composer.lock
+        run: composer validate --strict
 
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+      - name: Cache Composer packages
+        id: composer-cache
+        uses: actions/cache@v3
+        with:
+          path: vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
 
-    - name: Run test suite
-      run: composer run-script test
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress
 
-    - name: Run Static Analysis
-      run: composer run-script stan
+      - name: Run test suite with coverage
+        env:
+          XDEBUG_MODE: coverage
+        run: |
+          mkdir -p build/logs
+          ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
-    - name: Upload coverage to Codacy
-      run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report --language php --force-coverage-parser phpunit-xml --project-token ${{ secrets.CODACY_PROJECT_TOKEN }} --api-token ${{ secrets.CODACY_API_TOKEN }} --commit-uuid ${{ github.sha }} --commit-branch ${{ github.ref }} --commit-repo-name ${{ github.repository }} --commit-author-name ${{ github.actor }} --commit-author-email ${{ github.actor }} --commit-message ${{ github.event.head_commit.message }} --commit-date ${{ github.event.head_commit.timestamp }} --coverage-file build/logs/clover.xml
+      - name: Run Static Analysis
+        run: composer run-script stan
 
+      - name: Upload coverage to Codacy
+        run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report --language php --force-coverage-parser phpunit-xml --project-token ${{ secrets.CODACY_PROJECT_TOKEN }} --api-token ${{ secrets.CODACY_API_TOKEN }} --commit-uuid ${{ github.sha }} --commit-branch ${{ github.ref }} --commit-repo-name ${{ github.repository }} --commit-author-name ${{ github.actor }} --commit-author-email ${{ github.actor }} --commit-message ${{ github.event.head_commit.message }} --commit-date ${{ github.event.head_commit.timestamp }} --coverage-file build/logs/clover.xml
