--- a/.github/workflows/test-runners.yml
+++ b/.github/workflows/test-runners.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up PHP with Xdebug
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.3'
+          php-version: '8.1' # Adjust PHP version as necessary
           extensions: xdebug
           coverage: xdebug
 
@@ -49,4 +49,4 @@ jobs:
         run: composer run-script stan
 
       - name: Upload coverage to Codacy
-        run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report --language php --force-coverage-parser phpunit-xml --project-token ${{ secrets.CODACY_PROJECT_TOKEN }} --api-token ${{ secrets.CODACY_API_TOKEN }} --commit-uuid ${{ github.sha }} --commit-branch ${{ github.ref }} --commit-repo-name ${{ github.repository }} --commit-author-name ${{ github.actor }} --commit-author-email ${{ github.actor }} --commit-message ${{ github.event.head_commit.message }} --commit-date ${{ github.event.head_commit.timestamp }} --coverage-file build/logs/clover.xml
+        run: bash <(curl -Ls https://coverage.codacy.com/get.sh) report --language php --coverage-reporter phpunit --project-token ${{ secrets.CODACY_PROJECT_TOKEN }} --api-token ${{ secrets.CODACY_API_TOKEN }} --commit-uuid ${{ github.sha }} --coverage-file build/logs/clover.xml
